--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/helloqiu">View on GitHub</a>
 
           <h1 id="project_title">Helloqiu.GitHub.io——helloqiu&#39;s blog</h1>
-          <h2 id="project_tagline">helloqiu&#39;s blog</h2>
+          <h2 id="project_tagline">helloqiu的Blog</h2>
 
         </header>
     </div>
