--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>
 <a id="helloqiugithubio" class="anchor" href="#helloqiugithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>helloqiu.github.io</h1>
 
-<p>helloqiu's blog</p>
+<p>Welcome to helloqiu's blog~^_^\nThere is still nothing to show.</p>
       </section>
     </div>
 
