--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="helloqiugithubio" class="anchor" href="#helloqiugithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>helloqiu.github.io</h1>
+        <a id="helloqiugithubio" class="anchor" href="#helloqiugithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>helloqiu.github.io</h1>
 
-<p>Welcome to helloqiu's blog~^_^\nThere is still nothing to show.</p>
+        <p>Welcome to helloqiu's blog~^_^</p>
+        <p>There is still nothing to show.</p>
       </section>
     </div>
 
